Fixed minor bugs

--- a/mad-proj/README
+++ b/mad-proj/README
@@ -21,4 +21,4 @@ MAD -- Malicious Application Detector
     |   |-- ...
     |-- retrain/                                # where CNN retrain dataset go
     |   |-- ...
-    |-- mad.log                                 # log file for RPC
+    |-- mad.log                                 # log file for RPC (0-start; 1-stop; 2-retrain)
